<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.medhatmhtt.tassbeh.AfterSalah">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Adad_text"
        android:textSize="26sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/t3dad"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Adad"
        android:textSize="26sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="0"
        />

    <Button
        android:id="@+id/sob7anButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton"
        android:onClick="sob7an"
        android:padding="14dp"
        android:text="@string/sob7an" />

    <Button
        android:id="@+id/elhamulillahButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton"
        android:onClick="elhamdulillah"
        android:padding="14dp"
        android:text="@string/elhamulillah" />

    <Button
        android:id="@+id/allahAkberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton"
        android:onClick="allahAkber"
        android:padding="14dp"
        android:text="@string/AllahAkber" />
</LinearLayout>
</ScrollView>