<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.medhatmhtt.tassbeh.ForU">

    <TextView
        android:id="@+id/AdadForU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:text="0"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/DontForget"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:textSize="26sp" />

    <Button
        android:id="@+id/PressButton"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Press"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="press"
        android:background="@drawable/mybutton" />
    <Button
        android:id="@+id/ResetButton"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/PressButton"
        android:text="@string/Reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="reset"
        android:background="@drawable/mybutton" />
</RelativeLayout>
